[workspace]
members = ["actix-web-schema", "actix-web-schema-macro"]
resolver = "3"

[workspace.dependencies]
actix-web = { version = "4", features = ["http2"] }
actix-web-httpauth = { version = "0.8" }
actix-multipart = { version = "0.7" }
actix-ws = { version = "0.4" }
actix-files = { version = "0.6" }
actix-cors = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
log = { version = "0.4" }
thiserror = { version = "2" }
tokio = { version = "1" }
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
