[workspace]
members = ["actix-web-schema", "actix-web-schema-macro"]
resolver = "3"

[workspace.dependencies]
actix-web = { version = "4", features = ["http2"] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
