[package]
name = "actix-web-schema-macro"
version = "0.4.0"
edition = "2024"
description = "Procedural macros for actix-web-schema"
license = "Apache-2.0"
repository = "https://github.com/killf/actix-web-schema"
keywords = ["actix", "actix-web", "macro", "proc-macro"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]
authors = ["killf <killf@foxmail.com>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }