[package]
name = "actix-web-schema"
version = "0.1.0"
edition = "2024"
description = "Schema-based development tools for actix-web with service and response macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/actix-web-schema"
keywords = ["actix", "actix-web", "web", "schema", "macro"]
categories = ["web-programming", "api-bindings"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
actix-web-schema-macro = { path = "../actix-web-schema-macro", version = "0.1" }