[package]
name = "actix-web-schema"
version = "0.2.0"
edition = "2024"
description = "Schema-based development tools for actix-web with service and response macros"
license = "Apache-2.0"
repository = "https://github.com/killf/actix-web-schema"
keywords = ["actix", "actix-web", "web", "schema", "macro"]
categories = ["web-programming", "api-bindings"]
authors = ["killf <killf@foxmail.com>"]
readme = "../README.md"

[dependencies]
actix-web-schema-macro = { path = "../actix-web-schema-macro", version = "0.2.0" }